--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,12 @@
 }
 
 :root {
-  --color-bg: grey;
+  --color-bg: rgb(122, 170, 248);
   --color-bg-variant: #2c2c6c;
   --color-primary: #4db5ff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: #fff;
+  --color-light: rgba(255, 255, 255, 0.06);
 
   --conatiner-width-lg: 75%;
   --container-width-md: 86%;
@@ -34,4 +35,33 @@ body {
   font-family: "Noto Sans", sans-serif;
   background: var(--color-bg);
   color: var(--color-white);
+  line-height: 1.7;
+  background-image: url(../src/assets/bg-texture.png);
+}
+
+.container {
+  width: var(--conatiner-width-lg);
+  margin: 0 auto;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 500;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+section {
+  margin-top: 8rem;
+}
+
+section > h2,
+section > h5 {
+  text-align: center;
+  color: var(--color-light);
 }
