--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -52,8 +52,38 @@ header {
   left: calc(50%-11rem);
   margin-top: 4rem;
   border-radius: 12rem 12rem 0 0;
+  overflow: hidden;
 }
 
 .Tyler {
   border-radius: 12rem 12rem 0 0;
+}
+
+/* .scroll__down {
+  position: absolute;
+  right: -2.3rem;
+  bottom: 5rem;
+  transform: rotate(90deg);
+  font-weight: 300;
+} */
+
+/* >>>>>>>>>>>>> MEDIA (medium screen) QUERIES <<<<<<<<<<<<<<< */
+
+@media screen and (max-width: 1024px) {
+  .header {
+    height: 68vh;
+  }
+}
+
+/* >>>>>>>>>>>>> MEDIA (small screen) QUERIES <<<<<<<<<<<<<<< */
+
+@media screen and (max-width: 600px) {
+  .header {
+    height: 100vh;
+  }
+
+  .social__media,
+  .scroll__down {
+    display: none;
+  }
 }
