--- a/src/components/photo/photo.css
+++ b/src/components/photo/photo.css
@@ -11,6 +11,23 @@
 }
 
 .photoDiv {
-  padding-left: 490px;
-  padding-bottom: 85px;
+  /* padding-top: -50px; */
+  display: flex;
+  justify-items: center;
+  text-align: center;
+  align-items: center;
+  min-height: 100vh;
+  position: relative;
+}
+
+@media (max-width: 2000px) {
+  .photoDiv {
+    padding-left: 490px;
+  }
+}
+
+@media (max-width: 1800px) {
+  .photoDiv {
+    padding-left: 530px;
+  }
 }
