Nav Bar styling

--- a/src/index.css
+++ b/src/index.css
@@ -151,6 +151,7 @@ img {
 
 section {
   margin-top: 8rem;
+  height: 100vh;
 }
 
 /* >>>>>>>>>>>>> MEDIA (medium screen) QUERIES <<<<<<<<<<<<<<< */
