--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -48,7 +48,7 @@ header {
   height: 40rem;
   display: flex;
   flex-direction: column;
-  position: relative;
+  position: absolute;
   left: calc(50%-11rem);
   margin-top: 4rem;
   border-radius: 12rem 12rem 0 0;
