--- a/src/components/photo/photo.css
+++ b/src/components/photo/photo.css
@@ -13,6 +13,7 @@
 .photoDiv {
   /* padding-top: -50px; */
   display: flex;
+  flex-direction: column;
   justify-items: center;
   text-align: center;
   align-items: center;
@@ -20,17 +21,12 @@
   position: relative;
 }
 
-@media screen and (max-width: 2000px) {
-  .photoDiv {
-    padding-left: 490px;
+@media screen and (max-width: 1024px) {
+  .container {
+    width: var(--container-width-md);
   }
 }
 
-@media screen and (max-width: 1800px) {
-  .photoDiv {
-    padding-left: 530px;
-  }
-}
 @media screen and (max-width: 600px) {
   .container {
     width: var(--container-width-sm);
