--- a/src/components/photo/photo.css
+++ b/src/components/photo/photo.css
@@ -13,8 +13,9 @@
 .photoDiv {
   display: flex;
   flex-direction: column;
+  justify-items: center;
   text-align: center;
-  align-items: center;
+  /* align-items: center; */
   min-height: 100vh;
   position: relative;
 }
