--- a/src/components/photo/photo.css
+++ b/src/components/photo/photo.css
@@ -11,6 +11,9 @@
 }
 
 .photoDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   min-height: 100vh;
   position: relative;
 }
