--- a/src/components/photo/photo.css
+++ b/src/components/photo/photo.css
@@ -13,7 +13,7 @@
 .photoDiv {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   min-height: 100vh;
   position: relative;
 }
