--- a/src/components/photo/photo.css
+++ b/src/components/photo/photo.css
@@ -2,8 +2,6 @@
   background: var(--color-primary);
   width: 22rem;
   height: 30rem;
-  display: flex;
-  flex-direction: column;
   position: relative;
   left: calc(50%-11rem);
   margin-top: 4rem;
@@ -13,7 +11,7 @@
 .photoDiv {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
   min-height: 100vh;
   position: relative;
 }
